--- a/app/src/main/res/layout-large/activity_manager_edreception.xml
+++ b/app/src/main/res/layout-large/activity_manager_edreception.xml
@@ -52,6 +52,7 @@
     </RelativeLayout>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -124,20 +125,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
                     <TextView
                         android:id="@+id/tv_4"
+                        style="@style/TextBlueRecBold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Договор №: "
-                        style="@style/TextBlueRecBold"/>
+                        android:text="Договор №: " />
 
                     <MultiAutoCompleteTextView
                         android:id="@+id/mactv_z_dogovor"
+                        style="@style/TextBlueReception"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="//договор"
-                        style="@style/TextBlueReception"/>
+                        android:text="//договор" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -626,22 +629,23 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="8dp"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:visibility="gone">
 
                         <TextView
+                            style="@style/TextBlueRecBold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Доставка: "
-                            style="@style/TextBlueRecBold"/>
+                            android:text="Доставка: " />
 
                         <MultiAutoCompleteTextView
                             android:id="@+id/mactv_dostavka"
+                            style="@style/TextDarkBlueBold"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
-                            android:text="//доставка"
-                            style="@style/TextDarkBlueBold"/>
+                            android:text="//доставка" />
 
                     </LinearLayout>
 
