ThermalPrinter connected,WifiPrinter ready

--- a/app/src/main/res/layout/activity_manager_list.xml
+++ b/app/src/main/res/layout/activity_manager_list.xml
@@ -22,6 +22,7 @@
             android:layout_alignParentTop="true"
             android:hint="Введите номер заявки"
             android:imeOptions="actionSearch"
+            android:textSize="15dp"
             style="@style/TextSearchList"
             />
 
