--- a/app/src/main/res/layout/superviser_list_item_layout.xml
+++ b/app/src/main/res/layout/superviser_list_item_layout.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="26dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="100">
 
@@ -24,6 +24,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="40"
                 android:text="Hello"
+                android:textSize="13dp"
+                android:gravity="left"
                 android:textColor="@android:color/black"
                 style="@style/TextBlackList"/>
 
@@ -35,6 +37,7 @@
             android:layout_height="36dp"
             android:gravity="center"
             android:text="Hello"
+            android:textSize="15dp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
             android:textAlignment="center"
