--- a/app/src/main/res/layout/activity_exped.xml
+++ b/app/src/main/res/layout/activity_exped.xml
@@ -10,8 +10,8 @@
 
     <ScrollView
         android:id="@+id/scrollview"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:scrollbars="vertical">
 
         <RelativeLayout
@@ -27,8 +27,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="11dp"
                 android:layout_marginTop="35dp"
-                android:background="@drawable/border_black"
-                />
+                android:background="@drawable/border_black" />
 
             <TextView
                 android:id="@+id/headerText"
@@ -81,7 +80,7 @@
                 android:background="@android:color/black"
                 android:padding="1dp">
 
-                <TableRow android:layout_width="wrap_content">
+                <TableRow android:layout_width="match_parent">
 
                     <TextView
                         android:id="@+id/vremya"
