--- a/app/src/main/res/layout/activity_reception.xml
+++ b/app/src/main/res/layout/activity_reception.xml
@@ -395,6 +395,32 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/sopr"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="horizontal"
+                            android:visibility="gone">
+
+                            <TextView
+                                android:id="@+id/textView7"
+                                style="@style/TextBlueBold"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Другое:" />
+
+                            <EditText
+                                android:id="@+id/drug"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="10"
+                                android:hint="Другое"
+                                android:inputType="textPersonName" />
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
