--- a/app/src/main/res/layout/activity_etiketka.xml
+++ b/app/src/main/res/layout/activity_etiketka.xml
@@ -13,7 +13,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/label"
@@ -41,7 +42,8 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/colorPrimary"
                 android:text="Подк."
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/send"
@@ -59,7 +61,8 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/colorAccent"
                 android:text="Откл."
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:visibility="gone" />
         </LinearLayout>
 
 
