--- a/app/src/main/res/layout/activity_etiketkaloop.xml
+++ b/app/src/main/res/layout/activity_etiketkaloop.xml
@@ -81,21 +81,19 @@
                 android:background="@android:color/white"
                 android:orientation="vertical">
 
-
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/logo"
+                        android:id="@+id/logo1"
                         android:layout_width="132dp"
                         android:layout_height="52dp"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/smaller_logo" />
 
                     <ImageView
-                        android:id="@+id/shtrih"
+                        android:id="@+id/shtrih1"
                         android:layout_width="132dp"
                         android:layout_height="52dp"
                         android:layout_weight="1"
@@ -115,17 +113,17 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/gorod_otkuda"
+                            android:id="@+id/gorod_otkuda1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="Город откуда"
-                            android:textColor="@color/Black"
+                            android:textColor="@android:color/black"
                             android:textSize="17dp"
                             android:textStyle="bold" />
 
                         <View
-                            android:id="@+id/i5"
+                            android:id="@+id/i7"
                             android:layout_width="match_parent"
                             android:layout_height="2dp"
                             android:background="@android:color/black" />
@@ -139,17 +137,17 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/gorod_kuda"
+                            android:id="@+id/gorod_kuda1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="Город куда"
-                            android:textColor="@color/Black"
+                            android:textColor="@android:color/black"
                             android:textSize="17dp"
                             android:textStyle="bold" />
 
                         <View
-                            android:id="@+id/i6"
+                            android:id="@+id/i8"
                             android:layout_width="match_parent"
                             android:layout_height="2dp"
                             android:background="@android:color/black" />
@@ -164,69 +162,79 @@
 
 
                     <TextView
-                        android:id="@+id/otkuda"
+                        android:id="@+id/otkuda1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="откуда"
-                        android:textColor="@color/Black"
+                        android:textColor="@android:color/black"
                         android:textSize="10dp" />
 
                     <TextView
-                        android:id="@+id/kuda"
+                        android:id="@+id/kuda1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="куда"
-                        android:textColor="@color/Black"
+                        android:textColor="@android:color/black"
                         android:textSize="10dp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-
-                    <TextView
-                        android:id="@+id/otpravitel"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Отправитель:"
-                        android:textColor="@color/Black" />
-
-                    <TextView
-                        android:id="@+id/imya_otprav"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="2dp"
                         android:layout_weight="1"
-                        android:text="имя отправителя"
-                        android:textColor="@color/Black" />
+                        android:orientation="vertical">
 
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/mestoBig"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Место:"
+                            android:textColor="@android:color/black"
+                            android:textSize="15dp"
+                            android:textStyle="bold" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        <View
+                            android:id="@+id/i9"
+                            android:layout_width="match_parent"
+                            android:layout_height="2dp"
+                            android:background="@android:color/black" />
+                    </LinearLayout>
 
-
-                    <TextView
-                        android:id="@+id/poluchatel"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Получатель:"
-                        android:textColor="@color/Black" />
-
-                    <TextView
-                        android:id="@+id/imya_poluch"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="2dp"
                         android:layout_weight="1"
-                        android:text="имя получателя"
-                        android:textColor="@color/Black" />
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/mesto"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="3dp"
+                            android:text="1 из 2"
+                            android:textColor="@android:color/black"
+                            android:textSize="15dp"
+                            android:textStyle="bold" />
+
+                        <View
+                            android:id="@+id/i10"
+                            android:layout_width="match_parent"
+                            android:layout_height="2dp"
+                            android:background="@android:color/black" />
+
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -234,28 +242,24 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp">
 
-                    <TextView
-                        android:id="@+id/kolichMest"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Количество мест:"
-                        android:textColor="@color/Black" />
 
                     <TextView
-                        android:id="@+id/kolich"
+                        android:id="@+id/otpravitel1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="Отправитель:"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/imya_otprav1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
                         android:layout_weight="1"
-                        android:paddingLeft="40dp"
-                        android:text="количество"
-                        android:textColor="@color/Black" />
-                </LinearLayout>
+                        android:text="имя отправителя"
+                        android:textColor="@android:color/black" />
 
-                <View
-                    android:id="@+id/i1"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@android:color/black" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -263,92 +267,52 @@
 
 
                     <TextView
-                        android:id="@+id/vesBig"
+                        android:id="@+id/poluchatel1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Вес:"
-                        android:textColor="@color/Black" />
+                        android:text="Получатель:"
+                        android:textColor="@android:color/black" />
 
                     <TextView
-                        android:id="@+id/ves"
+                        android:id="@+id/imya_poluch1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
                         android:layout_weight="1"
-                        android:text="вес"
-                        android:textColor="@color/Black" />
+                        android:text="имя получателя"
+                        android:textColor="@android:color/black" />
                 </LinearLayout>
-
-                <View
-                    android:id="@+id/i2"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@android:color/black" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                    <TextView
-                        android:id="@+id/obiemBig"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Объем:"
-                        android:textColor="@color/Black" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp">
 
                     <TextView
-                        android:id="@+id/obiem"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="объем"
-                        android:textColor="@color/Black" />
-                </LinearLayout>
-
-                <View
-                    android:id="@+id/i3"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@android:color/black" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/Rasp"
+                        android:id="@+id/Rasp1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Распечатал:"
-                        android:textColor="@color/Black"
+                        android:textColor="@android:color/black"
                         android:textSize="10dp" />
 
                     <TextView
-                        android:id="@+id/admin"
+                        android:id="@+id/admin1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Администратор"
-                        android:textColor="@color/Black"
+                        android:textColor="@android:color/black"
                         android:textSize="10dp" />
 
                     <TextView
-                        android:id="@+id/date"
+                        android:id="@+id/date1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="ALA004703 от 10.11.2016"
                         android:textAlignment="viewEnd"
-                        android:textColor="@color/Black"
+                        android:textColor="@android:color/black"
                         android:textSize="10dp" />
                 </LinearLayout>
-
-                <View
-                    android:id="@+id/i4"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@android:color/black" />
-
             </LinearLayout>
         </RelativeLayout>
 
