--- a/app/src/main/res/layout/activity_etiketka.xml
+++ b/app/src/main/res/layout/activity_etiketka.xml
@@ -36,7 +36,7 @@
 
         <RelativeLayout
             android:id="@+id/relative"
-            android:layout_width="350dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
 
@@ -323,7 +323,7 @@
 
         <RelativeLayout
             android:id="@+id/relative1"
-            android:layout_width="350dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
 
@@ -571,6 +571,13 @@
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/printrel"
+                android:layout_width="200dp"
+                android:layout_height="200dp">
+
+            </RelativeLayout>
         </LinearLayout>
 
     </LinearLayout>
