--- a/app/src/main/res/layout-xlarge/activity_reception.xml
+++ b/app/src/main/res/layout-xlarge/activity_reception.xml
@@ -367,10 +367,16 @@
                                 android:text="Транспорт: "
                                 style="@style/TextBlueBold" />
 
-                            <Spinner
+                            <!--<Spinner-->
+                                <!--android:id="@+id/spin_transport"-->
+                                <!--android:layout_width="match_parent"-->
+                                <!--android:layout_height="match_parent"-->
+                                <!--android:layout_weight="1"-->
+                                <!--style="@style/TextPlainBlack" />-->
+                            <AutoCompleteTextView
                                 android:id="@+id/spin_transport"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 style="@style/TextPlainBlack" />
                         </LinearLayout>
